--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,7 +1,8 @@
 <!-- pages/index/index.wxml -->
 <view class="indexContainer">
-  <image class="avatar" src="/images/index/cart.jpg"></image>
-  <text class="userName">hello 小程序</text>
+  <image class="avatar" src="{{userInfo.avatarUrl}}"></image>
+  <button open-type="getUserInfo" style="display: {{flag?'none':'block'}}" bindgetuserinfo="handleGetUserInfo">请授权</button>
+  <text class="userName">hello {{userInfo.nickName}}</text>
   <view class="goStudy">
     <text>开启小程序之旅</text>
   </view>
