--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -9,6 +9,12 @@ page {
   align-items: center;
 }
 
+button {
+  font-size: 32rpx;
+  border: 1px solid #ccc;
+  background-color: #8ED145;
+}
+
 .avatar {
   width: 200rpx;
   height: 200rpx;
