--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -1,6 +1,6 @@
 <!--pages/detail/detail.wxml-->
 <view class="detailContainer">
-  <image class="headImg" src='{{detailObj.headImgSrc}}'></image>
+  <image class="headImg" src='{{detailObj.detail_img}}'></image>
   <view class="avatar_data">
     <image src='{{detailObj.avatar}}'></image>
     <text>{{detailObj.author}}</text>
@@ -10,7 +10,8 @@
   <text class="title">{{detailObj.title}}</text>
   <view class="collection_share_container">
     <view class="collection_share">
-      <image src='/images/icon/collection-anti.png'></image>
+      <image wx:if="{{!isCollected}}" catchtap='handleCollection' src='/images/icon/collection-anti.png'></image>
+      <image wx:if="{{isCollected}}" catchtap='handleCollection' src='/images/icon/collection.png'></image>
       <image src='/images/icon/share.png'></image>
     </view>
     <view class="line"></view>
