--- a/pages/detail/detail.wxss
+++ b/pages/detail/detail.wxss
@@ -65,3 +65,12 @@ button {
   font-size: 28rpx;
   line-height: 56rpx;
 }
+
+.musicImg {
+  width: 60rpx;
+  height: 60rpx;
+  position: absolute;
+  top: 200rpx;
+  left: 50%;
+  margin-left: -30rpx;
+}
